[gd_scene load_steps=3 format=3 uid="uid://cmpxern03wg1w"]

[ext_resource type="Script" path="res://UI/Menu/Review/CombatReviewMaker.gd" id="1_dev1k"]
[ext_resource type="LabelSettings" uid="uid://cpn6v2w5vr1au" path="res://UI/Theme/LabelSettings/DefaultLabelSettings.tres" id="1_w8cw1"]

[node name="CombatReviewMaker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dev1k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Combat Review
"
label_settings = ExtResource("1_w8cw1")

[node name="Questions" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ButtonSave" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save Review"

[node name="ButtonUpload" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Upload Review
"

[node name="ButtonExit" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonUpload" to="." method="_on_button_upload_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
